--- a/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Patches_Apply.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Patches_Apply.json
@@ -21,28 +21,28 @@
           "provisioningState": "Succeeded",
           "patchApplyStatus": "Succeeded",
           "createdTime": "2022-10-10T12:06:20.3421+00:00",
-          "updatedTime": "2022-10-10T12:06:20.3421+00:00",
-          "patchDetails": [
-            {
-              "targetContainerName": "test-container",
-              "targetImage": "testregistry.azurecr.io/test-image:latest",
-              "lastDetectionTime": "2022-10-10T12:06:19.5241+00:00",
-              "detectionStatus": "Succeeded",
-              "newImageName": "testregistry.azurecr.io/test-image:latest-patched-202210101206",
-              "newLayer": {
-                "name": "mcr.microsoft.com/dotnet/aspnet:7.0.7-cbl-mariner2.0",
-                "frameworkAndVersion": "dotnet:7.0.7",
-                "osAndVersion": "cbl-mariner2.0"
-              },
-              "oldLayer": {
-                "name": "mcr.microsoft.com/dotnet/aspnet:7.0.5-cbl-mariner2.0",
-                "frameworkAndVersion": "dotnet:7.0.5",
-                "osAndVersion": "cbl-mariner2.0"
-              },
-              "patchType": "FrameworkSecurity"
-            }
-          ]
-        }
+          "updatedTime": "2022-10-10T12:06:20.3421+00:00"
+        },
+        "patchDetails": [
+          {
+            "targetContainerName": "test-container",
+            "targetImage": "testregistry.azurecr.io/test-image:latest",
+            "lastDetectionTime": "2022-10-10T12:06:19.5241+00:00",
+            "detectionStatus": "Succeeded",
+            "newImageName": "testregistry.azurecr.io/test-image:latest-patched-202210101206",
+            "newLayer": {
+              "name": "mcr.microsoft.com/dotnet/aspnet:7.0.7-cbl-mariner2.0",
+              "frameworkAndVersion": "dotnet:7.0.7",
+              "osAndVersion": "cbl-mariner2.0"
+            },
+            "oldLayer": {
+              "name": "mcr.microsoft.com/dotnet/aspnet:7.0.5-cbl-mariner2.0",
+              "frameworkAndVersion": "dotnet:7.0.5",
+              "osAndVersion": "cbl-mariner2.0"
+            },
+            "patchType": "FrameworkSecurity"
+          }
+        ]
       }
     },
     "202": {
@@ -60,28 +60,28 @@
           "provisioningState": "Succeeded",
           "patchApplyStatus": "InProgress",
           "createdTime": "2022-10-10T12:06:20.3421+00:00",
-          "updatedTime": "2022-10-10T12:06:20.3421+00:00",
-          "patchDetails": [
-            {
-              "targetContainerName": "test-container",
-              "targetImage": "testregistry.azurecr.io/test-image:latest",
-              "lastDetectionTime": "2022-10-10T12:06:19.5241+00:00",
-              "detectionStatus": "Succeeded",
-              "newImageName": "testregistry.azurecr.io/test-image:latest-patched-202210101206",
-              "newLayer": {
-                "name": "mcr.microsoft.com/dotnet/aspnet:7.0.7-cbl-mariner2.0",
-                "frameworkAndVersion": "dotnet:7.0.7",
-                "osAndVersion": "cbl-mariner2.0"
-              },
-              "oldLayer": {
-                "name": "mcr.microsoft.com/dotnet/aspnet:7.0.5-cbl-mariner2.0",
-                "frameworkAndVersion": "dotnet:7.0.5",
-                "osAndVersion": "cbl-mariner2.0"
-              },
-              "patchType": "FrameworkSecurity"
-            }
-          ]
-        }
+          "updatedTime": "2022-10-10T12:06:20.3421+00:00"
+        },
+        "patchDetails": [
+          {
+            "targetContainerName": "test-container",
+            "targetImage": "testregistry.azurecr.io/test-image:latest",
+            "lastDetectionTime": "2022-10-10T12:06:19.5241+00:00",
+            "detectionStatus": "Succeeded",
+            "newImageName": "testregistry.azurecr.io/test-image:latest-patched-202210101206",
+            "newLayer": {
+              "name": "mcr.microsoft.com/dotnet/aspnet:7.0.7-cbl-mariner2.0",
+              "frameworkAndVersion": "dotnet:7.0.7",
+              "osAndVersion": "cbl-mariner2.0"
+            },
+            "oldLayer": {
+              "name": "mcr.microsoft.com/dotnet/aspnet:7.0.5-cbl-mariner2.0",
+              "frameworkAndVersion": "dotnet:7.0.5",
+              "osAndVersion": "cbl-mariner2.0"
+            },
+            "patchType": "FrameworkSecurity"
+          }
+        ]
       }
     }
   }
