--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
@@ -178,8 +178,11 @@
           }
         },
         "x-ms-examples": {
-          "Create or update hybrid configuration group value": {
+          "Create or update configuration group value": {
             "$ref": "./examples/ConfigurationGroupValueCreate.json"
+          },
+          "Create or update first party configuration group value": {
+            "$ref": "./examples/ConfigurationGroupValueFirstPartyCreate.json"
           }
         },
         "x-ms-long-running-operation": true,
