--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
@@ -382,7 +382,8 @@
         "secretConfigurationValue": {
           "type": "string",
           "description": "Name and value pairs that define the configuration value. It can be a well formed escaped JSON string.",
-          "x-ms-secret": true
+          "x-ms-secret": true,
+          "x-ms-mutability": [ "create", "update" ]
         }
       }
     },
