--- a/eng/pipelines/typespec-validation-all.yml
+++ b/eng/pipelines/typespec-validation-all.yml
@@ -38,8 +38,11 @@ jobs:
   - script: npm --version --loglevel info
     displayName: npm --version
 
-  - script: npm ci
-    displayName: npm ci
+  - script: git -c user.name="azure-sdk" -c user.email="azuresdk@microsoft.com" merge origin/main
+    displayName: git merge origin/main
+
+  - script: npm install --no-package-lock
+    displayName: npm install
 
   - script: npm ls -a
     displayName: npm ls -a
