--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-09-01-preview/appplatform.json
@@ -14780,7 +14780,11 @@
       "properties": {
         "caCertResourceId": {
           "description": "Resource Id of CA certificate for https URL of Git repository.",
-          "type": "string"
+          "type": "string",
+          "x-ms-mutability": [
+            "read",
+            "create"
+          ]
         },
         "username": {
           "description": "Username of git repository basic auth.",
