Fix x-ms-resource issue

--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/examples/ConfigurationGroupValueFirstPartyCreate.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/examples/ConfigurationGroupValueFirstPartyCreate.json
@@ -35,7 +35,7 @@
         "properties": {
           "provisioningState": "Succeeded",
           "publisherName": "testPublisher",
-          "publisherScope": "Public",
+          "publisherScope": "Private",
           "configurationGroupSchemaName": "testConfigurationGroupSchemaName",
           "configurationGroupSchemaOfferingLocation": "eastus",
           "configurationGroupSchemaResourceReference": {
@@ -63,7 +63,7 @@
         "properties": {
           "provisioningState": "Succeeded",
           "publisherName": "testPublisher",
-          "publisherScope": "Public",
+          "publisherScope": "Private",
           "configurationGroupSchemaName": "testConfigurationGroupSchemaName",
           "configurationGroupSchemaOfferingLocation": "eastus",
           "configurationGroupSchemaResourceReference": {
