--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
@@ -181,6 +181,9 @@
           "Create or update configuration group value": {
             "$ref": "./examples/ConfigurationGroupValueCreate.json"
           },
+          "Create or update configuration group value with secrets": {
+            "$ref": "./examples/ConfigurationGroupValueCreateSecret.json"
+          },
           "Create or update first party configuration group value": {
             "$ref": "./examples/ConfigurationGroupValueFirstPartyCreate.json"
           }
@@ -343,8 +346,9 @@
       "type": "object",
       "description": "Hybrid configuration group value properties.",
       "required": [
-        "configurationValue"
+        "configurationType"
       ],
+      "discriminator": "configurationType",
       "properties": {
         "provisioningState": {
           "readOnly": true,
@@ -375,20 +379,52 @@
           "$ref": "./common.json#/definitions/DeploymentResourceIdReference",
           "description": "The configuration group schema resource reference."
         },
+        "configurationType":{
+          "readOnly": true,
+          "x-ms-mutability": [
+            "read"
+          ],
+          "$ref": "./common.json#/definitions/SecretType",
+          "description": "The value which indicates if configuration values are secrets"
+        }
+      }
+    },
+    "ConfigurationValueWithSecrets": {
+      "description": "The ConfigurationValue with secrets.",
+      "type": "object",
+      "allOf": [
+        {
+          "$ref": "#/definitions/configurationGroupValuePropertiesFormat"
+        }
+      ],
+      "properties": {
         "configurationValue": {
           "type": "string",
-          "description": "Name and value pairs that define the configuration value. It can be a well formed escaped JSON string."
-        },
-        "secretConfigurationValue": {
-          "type": "string",
-          "description": "Name and value pairs that define the configuration value. It can be a well formed escaped JSON string.",
+          "description": "Name and value pairs that define the configuration value secrets. It can be a well formed escaped JSON string.",
           "x-ms-secret": true,
           "x-ms-mutability": [
             "create",
             "update"
           ]
         }
-      }
+      },
+      "x-ms-discriminator-value": "Secret"
+    },
+    "ConfigurationValueWithoutSecrets": {
+      "description": "The ConfigurationValue with no secrets.",
+      "type": "object",
+      "allOf": [
+        {
+          "$ref": "#/definitions/configurationGroupValuePropertiesFormat"
+        }
+      ],
+      "properties": {
+        "configurationValue": {
+          "type": "string",
+          "description": "Name and value pairs that define the configuration value. It can be a well formed escaped JSON string."
+        }
+      },
+      "x-ms-discriminator-value": "NoSecret"
     },
     "configurationGroupValueListResult": {
       "type": "object",
