--- a/specification/sphere/Sphere.Management/tspconfig.yaml
+++ b/specification/sphere/Sphere.Management/tspconfig.yaml
@@ -1,3 +1,6 @@
+parameters:  
+  "service-dir":
+    default: "sdk/sphere"
 emit:
   - '@azure-tools/typespec-autorest'
 linter:
@@ -9,10 +12,9 @@ options:
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/azuresphere.json"
     examples-directory: "{project-root}/examples"
-  "@azure-tools/cadl-python":
-    "basic-setup-py": true
-    "package-version": 3.0.0b6
-    "package-name": azure-sphere
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-sphere"
+    package-name: "{package-dir}"
   "@azure-tools/cadl-csharp":
     save-inputs: false
     clear-output-folder: true
