--- a/specification/cognitiveservices/data-plane/Speech/TextToSpeech/preview/2023-04-01-preview/examples/get_project_trainingsets.json
+++ b/specification/cognitiveservices/data-plane/Speech/TextToSpeech/preview/2023-04-01-preview/examples/get_project_trainingsets.json
@@ -2,7 +2,7 @@
     "parameters": {
         "Endpoint": "https://eastus.api.cognitive.microsoft.com/",
         "Ocp-Apim-Subscription-Key": "{API Key}",
-        "id": "812ebf7a-b564-4de4-a188-324995cd5b33"
+        "projectId": "812ebf7a-b564-4de4-a188-324995cd5b33"
     },
     "responses": {
         "200": {
