Common changes brought in 08-15-preview (#14893)
* add FreeHourBalance List&Get

* resolve comments

* fix checks

* Update FreeHourBalancesList.json

* typo

* reuse BillingHubGetFreeHourBalanceResponse

* fix CI

* typo

* common changes brought in 08-15

--- a/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-09-01-preview/examples/FirstPartyAppGet.json
+++ b/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-09-01-preview/examples/FirstPartyAppGet.json
@@ -1,6 +1,6 @@
 {
   "parameters": {
-    "subscriptionId": "subscription-id",
+    "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "resourceGroupName": "contoso-rg",
     "testBaseAccountName": "contoso-testBaseAccount",
     "firstPartyAppResourceName": "Office-365-fe51c56c-5dc0-499b-a807-a9d7746b34ae",
@@ -10,7 +10,7 @@
     "200": {
       "body": {
         "name": "firstPartyApp-fe51c56c-5dc0-499b-a807-a9d7746b34ae",
-        "id": "/subscriptions/subscription-id/resourceGroups/contoso-rg/providers/Microsoft.TestBase/testBaseAccounts/contoso-testBaseAccount/firstPartyApps/firstPartyApp-fe51c56c-5dc0-499b-a807-a9d7746b34ae",
+        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/contoso-rg/providers/Microsoft.TestBase/testBaseAccounts/contoso-testBaseAccount/firstPartyApps/firstPartyApp-fe51c56c-5dc0-499b-a807-a9d7746b34ae",
         "type": "Microsoft.TestBase/testBaseAccounts/firstPartyApps",
         "properties": {
           "mediaType": "Office",
