--- a/specification/cloudhealth/CloudHealth.Management/examples/AuthenticationSettings_ListByHealthModel_MaximumSet_Gen.json
+++ b/specification/cloudhealth/CloudHealth.Management/examples/AuthenticationSettings_ListByHealthModel_MaximumSet_Gen.json
@@ -5,7 +5,7 @@
     "api-version": "2023-10-01-preview",
     "subscriptionId": "4980D7D5-4E07-47AD-AD34-E76C6BC9F061",
     "resourceGroupName": "rgopenapi",
-    "healthModelName": "W"
+    "healthModelName": "model1"
   },
   "responses": {
     "200": {
