--- a/specification/cloudhealth/resource-manager/Microsoft.CloudHealth/preview/2023-10-01-preview/examples/AuthenticationSettings_Delete_MaximumSet_Gen.json
+++ b/specification/cloudhealth/resource-manager/Microsoft.CloudHealth/preview/2023-10-01-preview/examples/AuthenticationSettings_Delete_MaximumSet_Gen.json
@@ -5,7 +5,7 @@
     "api-version": "2023-10-01-preview",
     "subscriptionId": "4980D7D5-4E07-47AD-AD34-E76C6BC9F061",
     "resourceGroupName": "rgopenapi",
-    "healthModelName": "X",
+    "healthModelName": "model1",
     "authenticationSettingName": "zNq420P2V-DP1m7RKY50DLIk1--T36cV2-94-0L7O-7a"
   },
   "responses": {
