--- a/specification/cloudhealth/resource-manager/Microsoft.CloudHealth/preview/2023-10-01-preview/examples/AuthenticationSettings_Get_MaximumSet_Gen.json
+++ b/specification/cloudhealth/resource-manager/Microsoft.CloudHealth/preview/2023-10-01-preview/examples/AuthenticationSettings_Get_MaximumSet_Gen.json
@@ -6,7 +6,7 @@
     "subscriptionId": "4980D7D5-4E07-47AD-AD34-E76C6BC9F061",
     "resourceGroupName": "rgopenapi",
     "healthModelName": "O0x1-DyuEC--HQ-85CMhMR95AC---8pV",
-    "authenticationSettingName": "H"
+    "authenticationSettingName": "auth1"
   },
   "responses": {
     "200": {
