better sample data

--- a/specification/cloudhealth/CloudHealth.Management/examples/AuthenticationSettings_Delete_MaximumSet_Gen.json
+++ b/specification/cloudhealth/CloudHealth.Management/examples/AuthenticationSettings_Delete_MaximumSet_Gen.json
@@ -3,10 +3,10 @@
   "operationId": "AuthenticationSettings_Delete",
   "parameters": {
     "api-version": "2023-10-01-preview",
-    "subscriptionId": "4980D7D5-4E07-47AD-AD34-E76C6BC9F061",
-    "resourceGroupName": "rgopenapi",
-    "healthModelName": "model1",
-    "authenticationSettingName": "zNq420P2V-DP1m7RKY50DLIk1--T36cV2-94-0L7O-7a"
+    "subscriptionId": "00000000-0000-0000-0000-000000000000",
+    "resourceGroupName": "my-resource-group",
+    "healthModelName": "my-health-model",
+    "authenticationSettingName": "my-auth-setting"
   },
   "responses": {
     "200": {},
