--- a/specification/cloudhealth/CloudHealth.Management/examples/AuthenticationSettings_Get_MaximumSet_Gen.json
+++ b/specification/cloudhealth/CloudHealth.Management/examples/AuthenticationSettings_Get_MaximumSet_Gen.json
@@ -3,10 +3,10 @@
   "operationId": "AuthenticationSettings_Get",
   "parameters": {
     "api-version": "2023-10-01-preview",
-    "subscriptionId": "4980D7D5-4E07-47AD-AD34-E76C6BC9F061",
-    "resourceGroupName": "rgopenapi",
-    "healthModelName": "O0x1-DyuEC--HQ-85CMhMR95AC---8pV",
-    "authenticationSettingName": "auth1"
+    "subscriptionId": "00000000-0000-0000-0000-000000000000",
+    "resourceGroupName": "my-resource-group",
+    "healthModelName": "my-health-model",
+    "authenticationSettingName": "my-auth-setting"
   },
   "responses": {
     "200": {
@@ -14,17 +14,17 @@
         "properties": {
           "managedIdentityName": "SystemAssigned",
           "provisioningState": "Succeeded",
-          "displayName": "pyibdkasjrahptggopehjyrgtnmksds",
+          "displayName": "my-display-name",
           "authenticationKind": "ManagedIdentity"
         },
-        "id": "dqtseery",
-        "name": "yiczfkyhtjikjdiyfieqr",
-        "type": "ohljrrnzqmhjpqjzysfb",
+        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/my-resource-group/providers/Microsoft.CloudHealth/healthmodels/my-health-model/authenticationSettings/my-auth-setting",
+        "name": "my-name",
+        "type": "Microsoft.CloudHealth/healthmodels/authenticationSettings",
         "systemData": {
-          "createdBy": "cbhzxxlvkmufetjjjwtk",
+          "createdBy": "my-username",
           "createdByType": "User",
           "createdAt": "2023-09-18T14:04:09.327Z",
-          "lastModifiedBy": "arz",
+          "lastModifiedBy": "my-username",
           "lastModifiedByType": "User",
           "lastModifiedAt": "2023-09-18T14:04:09.328Z"
         }
