--- a/specification/cloudhealth/CloudHealth.Management/examples/AuthenticationSettings_ListByHealthModel_MaximumSet_Gen.json
+++ b/specification/cloudhealth/CloudHealth.Management/examples/AuthenticationSettings_ListByHealthModel_MaximumSet_Gen.json
@@ -3,9 +3,9 @@
   "operationId": "AuthenticationSettings_ListByHealthModel",
   "parameters": {
     "api-version": "2023-10-01-preview",
-    "subscriptionId": "4980D7D5-4E07-47AD-AD34-E76C6BC9F061",
-    "resourceGroupName": "rgopenapi",
-    "healthModelName": "model1"
+    "subscriptionId": "00000000-0000-0000-0000-000000000000",
+    "resourceGroupName": "my-resource-group",
+    "healthModelName": "my-health-model"
   },
   "responses": {
     "200": {
@@ -15,17 +15,17 @@
             "properties": {
               "managedIdentityName": "SystemAssigned",
               "provisioningState": "Succeeded",
-              "displayName": "pyibdkasjrahptggopehjyrgtnmksds",
+              "displayName": "my-display-name",
               "authenticationKind": "ManagedIdentity"
             },
-            "id": "dqtseery",
-            "name": "yiczfkyhtjikjdiyfieqr",
-            "type": "ohljrrnzqmhjpqjzysfb",
+            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/my-resource-group/providers/Microsoft.CloudHealth/healthModels/my-health-model/authenticationSettings/my-name",
+            "name": "my-name",
+            "type": "Microsoft.CloudHealth/healthModels/authenticationSettings",
             "systemData": {
-              "createdBy": "cbhzxxlvkmufetjjjwtk",
+              "createdBy": "my-user",
               "createdByType": "User",
               "createdAt": "2023-09-18T14:04:09.327Z",
-              "lastModifiedBy": "arz",
+              "lastModifiedBy": "my-user",
               "lastModifiedByType": "User",
               "lastModifiedAt": "2023-09-18T14:04:09.328Z"
             }
