--- a/specification/cloudhealth/CloudHealth.Management/tspconfig.yaml
+++ b/specification/cloudhealth/CloudHealth.Management/tspconfig.yaml
@@ -2,7 +2,7 @@ emit:
   - "@azure-tools/typespec-autorest"
 options:
   "@azure-tools/typespec-autorest":
-    azure-resource-provider-folder: ./resource-manager
-    output-file: cloudhealth.json
-    examples-directory: ./examples
-    new-line: lf
+    azure-resource-provider-folder: "resource-manager"
+    emitter-output-dir: "{project-root}/.."
+    examples-directory: "examples"
+    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/cloudhealth.json"
