Removing old code owner

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -207,7 +207,7 @@
 /specification/search/data-plane/ @arv100kri @bleroy @AlexGhiondea @Mohit-Chakraborty @Azure/api-stewardship-board @BevLoh
 
 # PRLabel: %Search
-/specification/search/resource-manager/ @abhi1509 @tjacobhi @conor-joplin @BevLoh
+/specification/search/resource-manager/ @tjacobhi @conor-joplin @BevLoh
 
 /specification/serialconsole/ @amitchat @craigw @asinn826
 
