--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
   "name": "azure-rest-api-specs",
   "devDependencies": {
-    "@azure-tools/cadl-apiview": "0.3.5",
-    "@azure-tools/cadl-autorest": "0.26.0",
-    "@azure-tools/cadl-azure-core": "0.26.0",
-    "@azure-tools/cadl-azure-resource-manager": "0.26.0",
-    "@azure-tools/cadl-providerhub": "0.26.0",
     "@azure-tools/typespec-apiview": "0.4.4",
-    "@azure-tools/typespec-autorest": "0.31.0",
-    "@azure-tools/typespec-azure-core": "0.31.0",
-    "@azure-tools/typespec-azure-resource-manager": "0.31.0",
-    "@azure-tools/typespec-client-generator-core": "0.31.0",
-    "@azure-tools/typespec-providerhub": "0.31.0",
-    "@typespec/compiler": "0.45.2",
-    "@typespec/http": "0.45.0",
-    "@typespec/openapi": "0.45.0",
-    "@typespec/rest": "0.45.0",
-    "@typespec/versioning": "0.45.0",
+    "@azure-tools/typespec-autorest": "0.34.0",
+    "@azure-tools/typespec-azure-core": "0.34.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.34.0",
+    "@azure-tools/typespec-client-generator-core": "0.34.0",
+    "@azure-tools/typespec-providerhub": "0.34.0",
+    "@typespec/compiler": "0.48.0",
+    "@typespec/http": "0.48.0",
+    "@typespec/openapi": "0.48.0",
+    "@typespec/rest": "0.48.0",
+    "@typespec/versioning": "0.48.0",
     "@azure/avocado": "^0.8.4",
-    "@types/prettier": "^2.7.2",
-    "prettier": "^2.8.8",
-    "typescript": "~5.0.4",
-    "typespec-validation": "file:eng/tools/TypeSpecValidation"
-  },
-  "scripts": {
-    "postinstall": "npx --no tsc -- -p eng/tools/TypeSpecValidation"
+    "azure-rest-api-specs-eng-tools": "file:eng/tools",
+    "prettier": "~3.0.3",
+    "typescript": "~5.1.3"
   },
   "private": true
 }
+  
