Changing "NoSecret" to "Open"

--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
@@ -384,7 +384,7 @@
           "x-ms-mutability": [
             "read"
           ],
-          "$ref": "./common.json#/definitions/SecretType",
+          "$ref": "./common.json#/definitions/configurationType",
           "description": "The value which indicates if configuration values are secrets"
         }
       }
@@ -424,7 +424,7 @@
           "description": "Name and value pairs that define the configuration value. It can be a well formed escaped JSON string."
         }
       },
-      "x-ms-discriminator-value": "NoSecret"
+      "x-ms-discriminator-value": "Open"
     },
     "configurationGroupValueListResult": {
       "type": "object",
