adding new field for CGV
adding secretConfigurationValue

--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
@@ -398,7 +398,7 @@
         }
       ],
       "properties": {
-        "configurationValue": {
+        "secretConfigurationValue": {
           "type": "string",
           "description": "Name and value pairs that define the configuration value secrets. It can be a well formed escaped JSON string.",
           "x-ms-secret": true,
