Removing other stale owners, adding Giuliano

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -204,7 +204,7 @@
 /specification/scheduler/ @pinwang81
 
 # PRLabel: %Search
-/specification/search/data-plane/ @arv100kri @bleroy @AlexGhiondea @Mohit-Chakraborty @Azure/api-stewardship-board @BevLoh
+/specification/search/data-plane/ @arv100kri @bleroy @Azure/api-stewardship-board @BevLoh @giulianob
 
 # PRLabel: %Search
 /specification/search/resource-manager/ @tjacobhi @conor-joplin @BevLoh
