--- a/specification/cognitiveservices/Vision.ImageAnalysis/package.json
+++ b/specification/cognitiveservices/Vision.ImageAnalysis/package.json
@@ -1,12 +1,6 @@
 {
-  "name": "Vision.ImageAnalysis",
-  "version": "0.1.0",
-  "type": "module",
-  "dependencies": {
-    "@azure-tools/typespec-autorest": "^0.34.0",
-    "@azure-tools/typespec-azure-core": "^0.34.0",
-    "@typespec/rest": "^0.48.0",
-    "@typespec/versioning": "^0.48.0"
-  },
-  "private": true
+    "main": "dist/src/index.js",
+    "dependencies": {
+      "@azure-tools/typespec-csharp": "0.2.0-beta.20230919.1"
+    }
 }
