Updating emitter options for seccop skillsetauthoring sdk

--- a/specification/securitycopilot/TypeSpec/tspconfig.yaml
+++ b/specification/securitycopilot/TypeSpec/tspconfig.yaml
@@ -33,22 +33,22 @@ options:
     emitter-output-dir: "{project-root}/{autorest-dir}"
     output-file: "SecurityCopilotSkillContextAPI.OpenAPI2.{version-name}"
   "@azure-tools/typespec-csharp":
-    package-dir: "{package}"
-    namespace: "{package}"
+    package-dir: "Microsoft.Security.Copilot.SkillsetAuthoring"
+    namespace: "{package-dir}"
     clear-output-folder: false
     save-inputs: true
   "@azure-tools/typespec-java":
-    package-dir: "{package}"
-    namespace: "{package}"
+    package-dir: "Microsoft.Security.Copilot.SkillsetAuthoring"
+    namespace: "{package-dir}"
     clear-output-folder: false
     save-inputs: true
   "@azure-tools/typespec-python":
-    package-dir: "{package}"
-    namespace: "{package}"
+    package-dir: "Microsoft.Security.Copilot.SkillsetAuthoring"
+    namespace: "{package-dir}"
     clear-output-folder: false
     save-inputs: true
   "@azure-tools/typespec-ts":
-    package-dir: "{package}"
-    namespace: "{package}"
+    package-dir: "Microsoft.Security.Copilot.SkillsetAuthoring"
+    namespace: "{package-dir}"
     clear-output-folder: false
     save-inputs: true
