--- a/specification/cognitiveservices/Vision.ImageAnalysis/tspconfig.yaml
+++ b/specification/cognitiveservices/Vision.ImageAnalysis/tspconfig.yaml
@@ -6,6 +6,10 @@ parameters:
 emit:
  - "@azure-tools/typespec-autorest"
 options:
+  "@azure-tools/typespec-python":
+    package-mode: "dataplane"
+    package-dir: "azure-ai-vision-imageanalysis"
+    package-name: "{package-dir}"
   "@azure-tools/typespec-autorest":
     emitter-output-dir: "{project-root}/../"
     output-file: "{azure-resource-provider-folder}/AzureAIVision/ImageAnalysis/{version-status}/{version}/generated.json"
