--- a/specification/resources/resource-manager/Microsoft.AzureCIS/preview/2023-08-22-preview/examples/CreateDstsApplications.json
+++ b/specification/resources/resource-manager/Microsoft.AzureCIS/preview/2023-08-22-preview/examples/CreateDstsApplications.json
@@ -5,7 +5,7 @@
     "subscriptionId": "mySubscriptionId",
     "resourceGroupName": "myResourceGroup",
     "resourceName": "prodUSEastAzcis",
-    "api-version": "2021-08-10-privatepreview",
+    "api-version": "2023-08-22-preview",
     "DstsApplications": {
       "location": "eastus",
       "properties": {
