--- a/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
+++ b/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
@@ -17,7 +17,7 @@ options:
     emitter-output-dir: "{project-root}/../data-plane/Microsoft.EventGrid/preview/2023-06-01-preview"
   "@azure-tools/typespec-python":
     package-pprint-name: "\"Azure Event Grid\""
-    package-mode: "dataplane"
+    package-mode: "azure-dataplane"
     package-version: 4.12.0b1
     package-dir: "azure-eventgrid"
     package-name: "{package-dir}"
