--- a/specification/codesigning/CodeSigning/tspconfig.yaml
+++ b/specification/codesigning/CodeSigning/tspconfig.yaml
@@ -14,7 +14,7 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/azure.codesigning.json"
   "@azure-tools/typespec-python":
     package-dir: "azure-codesigning"
-    package-mode: "dataplane"
+    package-mode: "azure-dataplane"
     package-name: "{package-dir}"
   "@azure-tools/typespec-csharp":
     clear-output-folder: true
