--- a/specification/cognitiveservices/ContentSafety/tspconfig.yaml
+++ b/specification/cognitiveservices/ContentSafety/tspconfig.yaml
@@ -15,7 +15,7 @@ options:
   "@azure-tools/typespec-python":
     package-dir: "azure-ai-contentsafety"
     package-name: "{package-dir}"
-    package-mode: dataplane
+    package-mode: azure-dataplane
   "@azure-tools/typespec-csharp":
     package-dir: "Azure.AI.ContentSafety"
     namespace: "{package-dir}"
