--- a/specification/cognitiveservices/HealthInsights/HealthInsights.TrialMatcher/tspconfig.yaml
+++ b/specification/cognitiveservices/HealthInsights/HealthInsights.TrialMatcher/tspconfig.yaml
@@ -14,7 +14,7 @@ options:
     new-project: false
     model-namespace: false
   "@azure-tools/cadl-python":
-    package-mode: "dataplane"
+    package-mode: "azure-dataplane"
     package-name: "azure-healthinsights-clinicalmatching"
   "@azure-tools/cadl-typescript": 
     packageDetails:
