--- a/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
+++ b/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
@@ -18,7 +18,7 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/widgets.json"
   "@azure-tools/typespec-python":
     package-dir: "azure-contoso-widgetmanager"
-    package-mode: "dataplane"
+    package-mode: "azure-dataplane"
     package-name: "{package-dir}"
   "@azure-tools/typespec-csharp":
     package-dir: "Azure.Template.Contoso"
