--- a/specification/netapp/resource-manager/Microsoft.NetApp/preview/2023-05-01-preview/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/preview/2023-05-01-preview/netapp.json
@@ -5906,7 +5906,7 @@
           "maxLength": 255,
           "pattern": "^[a-zA-Z0-9][a-zA-Z0-9.-]{0,253}[a-zA-Z0-9]$",
           "x-nullable": true,
-          "example": "defaultv4iddomain.com"
+          "example": "defaultv4IDDomain.com"
         },
         "isMultiAdEnabled": {
           "type": "boolean",
