added to requred again

--- a/specification/netapp/resource-manager/Microsoft.NetApp/preview/2023-05-01-preview/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/preview/2023-05-01-preview/netapp.json
@@ -7194,6 +7194,9 @@
     "replicationObject": {
       "description": "Replication properties",
       "type": "object",
+      "required": [
+        "remoteVolumeResourceId"
+      ],
       "properties": {
         "replicationId": {
           "type": "string",
@@ -8987,7 +8990,7 @@
         },
         "networkFeatures": {
           "$ref": "#/definitions/networkFeatures",
-          "description": "Network features available to the volume, some such"
+          "description": "Network features available to the volume"
         }
       }
     },
