updated the build resource to support build upload and log streaming, with a token to be passed in via header

--- a/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Builds_CreateOrUpdate_NoConfig.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Builds_CreateOrUpdate_NoConfig.json
@@ -18,7 +18,14 @@
         "properties": {
           "provisioningState": "Succeeded",
           "buildStatus": "InProgress",
-          "uploadEndpoint": "https://testStorage.blob.core.windows.net/buildGUID/blobName"
+          "uploadEndpoint": {
+            "endpoint": "foo.azurecontainerapps.dev/upload",
+            "token": "asdf"
+          },
+          "logStreamEndpoint": {
+            "endpoint": "foo.azurecontainerapps.dev/logstream",
+            "token": "asdf"
+          }
         },
         "systemData": {
           "createdBy": "sample@microsoft.com",
@@ -41,7 +48,14 @@
         "properties": {
           "provisioningState": "Creating",
           "buildStatus": "InProgress",
-          "uploadEndpoint": "https://testStorage.blob.core.windows.net/buildGUID/blobName"
+          "uploadEndpoint": {
+            "endpoint": "foo.azurecontainerapps.dev/upload",
+            "token": "asdf"
+          },
+          "logStreamEndpoint": {
+            "endpoint": "foo.azurecontainerapps.dev/logstream",
+            "token": "asdf"
+          }
         },
         "systemData": {
           "createdBy": "sample@microsoft.com",
