--- a/specification/cognitiveservices/Vision.ImageAnalysis/tspconfig.yaml
+++ b/specification/cognitiveservices/Vision.ImageAnalysis/tspconfig.yaml
@@ -1,6 +1,6 @@
 parameters:
   "service-dir":
-    default: "sdk/imageAnalysis"
+    default: "sdk/cognativeservices/imageAnalysis"
   "dependencies":
     default: ""
 emit:
