--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-04-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-04-01-preview/appconfiguration.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "2023-03-01",
+    "version": "2023-04-01-preview",
     "title": "AppConfigurationManagementClient"
   },
   "host": "management.azure.com",
