--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-04-01-preview/examples/ConfigurationStoresCreateReplica.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-04-01-preview/examples/ConfigurationStoresCreateReplica.json
@@ -7,7 +7,7 @@
     "replicaCreationParameters": {
       "location": "eastus"
     },
-    "api-version": "2023-03-01"
+    "api-version": "2023-04-01-preview"
   },
   "responses": {
     "200": {
