--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-04-01-preview/examples/ConfigurationStoresUpdatePrivateEndpointConnection.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-04-01-preview/examples/ConfigurationStoresUpdatePrivateEndpointConnection.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "myResourceGroup",
     "configStoreName": "contoso",
     "privateEndpointConnectionName": "myConnection",
-    "api-version": "2023-03-01",
+    "api-version": "2023-04-01-preview",
     "privateEndpointConnection": {
       "properties": {
         "privateLinkServiceConnectionState": {
