--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-04-01-preview/examples/DeletedConfigurationStoresGet.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-04-01-preview/examples/DeletedConfigurationStoresGet.json
@@ -2,7 +2,7 @@
   "parameters": {
     "configStoreName": "contoso",
     "location": "westus",
-    "api-version": "2023-03-01",
+    "api-version": "2023-04-01-preview",
     "subscriptionId": "c80fb759-c965-4c6a-9110-9b2b2d038882"
   },
   "responses": {
