--- a/specification/resources/CIS.Management/examples/DstsApplication_ListByResourceGroup.json
+++ b/specification/resources/CIS.Management/examples/DstsApplication_ListByResourceGroup.json
@@ -3,7 +3,7 @@
   "operationId": "DstsApplication_ListByResourceGroup",
   "parameters": {
     "subscriptionId": "mySubscriptionId",
-    "resourceGroupName": "examplerg",
+    "resourceGroupName": "myResourceGroup",
     "api-version": "2023-08-22-preview"
   },
   "responses": {
