--- a/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-11-01-preview/appplatform.json
+++ b/specification/appplatform/resource-manager/Microsoft.AppPlatform/preview/2023-11-01-preview/appplatform.json
@@ -14389,6 +14389,19 @@
             "$ref": "#/definitions/ApiPortalInstance"
           },
           "readOnly": true
+        },
+        "apiTryOutEnabledState": {
+          "description": "Indicates whether the API try-out feature is enabled or disabled. When enabled, users can try out the API by sending requests and viewing responses in API portal. When disabled, users cannot try out the API.",
+          "type": "string",
+          "default": "Enabled",
+          "enum": [
+            "Enabled",
+            "Disabled"
+          ],
+          "x-ms-enum": {
+            "name": "ApiPortalApiTryOutEnabledState",
+            "modelAsString": true
+          }
         }
       }
     },
